--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,12 +1,13 @@
 format = """
-[←](#9A348E)\
+[](#9A348E)\
+$os\
 $username\
-[→](bg:#DA627D fg:#9A348E)\
+[](bg:#DA627D fg:#9A348E)\
 $directory\
-[→](fg:#DA627D bg:#FCA17D)\
+[](fg:#DA627D bg:#FCA17D)\
 $git_branch\
 $git_status\
-[→](fg:#FCA17D bg:#86BBD8)\
+[](fg:#FCA17D bg:#86BBD8)\
 $c\
 $elixir\
 $elm\
@@ -17,108 +18,122 @@ $julia\
 $nodejs\
 $nim\
 $rust\
-[→](fg:#86BBD8 bg:#06969A)\
+$scala\
+[](fg:#86BBD8 bg:#06969A)\
 $docker_context\
-[→](fg:#06969A bg:#33658A)\
+[](fg:#06969A bg:#33658A)\
 $time\
-[→ ](fg:#33658A)\
+[ ](fg:#33658A)\
 """
- 
+
 # Disable the blank line at the start of the prompt
 # add_newline = false
- 
-# You can also replace your username with a neat symbol like  to save some space
+
+# You can also replace your username with a neat symbol like   or disable this
+# and use the os module below
 [username]
 show_always = true
 style_user = "bg:#9A348E"
 style_root = "bg:#9A348E"
-format = '[$user ]($style)'
- 
+format = '[crawlyfi.dev ]($style)'
+disabled = false
+
+# An alternative to the username module which displays a symbol that
+# represents the current operating system
+[os]
+style = "bg:#9A348E"
+disabled = true # Disabled by default
+
 [directory]
 style = "bg:#DA627D"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
- 
+
 # Here is how you can shorten some long paths by text replacement
 # similar to mapped_locations in Oh My Posh:
 [directory.substitutions]
-"Documents" = "📄 "
-"Downloads" = "📥 "
-"Music" = "🎜 "
-"Pictures" = "📷 "
+"Documents" = " "
+"Downloads" = " "
+"Music" = " "
+"Pictures" = " "
 # Keep in mind that the order matters. For example:
 # "Important Documents" = "  "
 # will not be replaced, because "Documents" was already substituted before.
 # So either put "Important Documents" before "Documents" or use the substituted version:
 # "Important  " = "  "
- 
+
 [c]
-symbol = "© "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [docker_context]
-symbol = "🐳 "
+symbol = " "
 style = "bg:#06969A"
-format = '[[ $symbol $context ](bg:#06969A)]($style) $path'
- 
+format = '[ $symbol $context ]($style) $path'
+
 [elixir]
-symbol = "💧 "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [elm]
-symbol = "🌳 "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [git_branch]
-symbol = "☊"
+symbol = ""
 style = "bg:#FCA17D"
-format = '[[ $symbol $branch ](bg:#FCA17D)]($style)'
- 
+format = '[ $symbol $branch ]($style)'
+
 [git_status]
 style = "bg:#FCA17D"
-format = '[[($all_status$ahead_behind )](bg:#FCA17D)]($style)'
- 
+format = '[$all_status$ahead_behind ]($style)'
+
 [golang]
-symbol = "🐹 "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [haskell]
-symbol = "λ "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [java]
-symbol = "☕ "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [julia]
-symbol = "ஃ "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [nodejs]
-symbol = "🔷 "
+symbol = ""
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [nim]
-symbol = "👑 "
+symbol = " "
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
 [rust]
-symbol = "🦀"
+symbol = ""
 style = "bg:#86BBD8"
-format = '[[ $symbol ($version) ](bg:#86BBD8)]($style)'
- 
+format = '[ $symbol ($version) ]($style)'
+
+[scala]
+symbol = " "
+style = "bg:#86BBD8"
+format = '[ $symbol ($version) ]($style)'
+
 [time]
 disabled = false
 time_format = "%R" # Hour:Minute Format
 style = "bg:#33658A"
-format = '[[ 🤍 $time ](bg:#33658A)]($style)'
+format = '[ ♥ $time ]($style)'
