--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -19,9 +19,8 @@ $nodejs\
 $nim\
 $rust\
 $scala\
-[](fg:#86BBD8 bg:#06969A)\
-$docker_context\
-[](fg:#06969A bg:#33658A)\
+[](fg:#86BBD8 bg:#33658A)\
+
 $time\
 [ ](fg:#33658A)\
 """
@@ -35,7 +34,7 @@ $time\
 show_always = true
 style_user = "bg:#9A348E"
 style_root = "bg:#9A348E"
-format = '[crawlyfi.dev ]($style)'
+format = '[coder ]($style)'
 disabled = false
 
 # An alternative to the username module which displays a symbol that
@@ -84,7 +83,7 @@ style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
 [git_branch]
-symbol = ""
+symbol = ""
 style = "bg:#FCA17D"
 format = '[ $symbol $branch ]($style)'
 
@@ -113,7 +112,7 @@ style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
 [nodejs]
-symbol = ""
+symbol = "node"
 style = "bg:#86BBD8"
 format = '[ $symbol ($version) ]($style)'
 
@@ -136,4 +135,5 @@ format = '[ $symbol ($version) ]($style)'
 disabled = false
 time_format = "%R" # Hour:Minute Format
 style = "bg:#33658A"
-format = '[ ♥ $time ]($style)'
+format = '[ ♥ ]($style)'
+# format = '[ ♥ $time ]($style)'
